# stair_case_paradigm_package

./: .gitmodules  README.md  pyproject.toml
stair_case_paradigm/: __init__.py  stair_case_paradigm.py
tests/: test_result.py  test_step.py
