[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stair_case_paradigm"
version = "0.0.1"
authors = [  { name="8gaU8" },]
description = "Implementation of Stair-Case Paradigm"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]
dependencies = ["numpy"]
